--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^17.0.1",
     "@types/react-redux": "^7.1.16",
     "@types/react-responsive": "^8.0.2",
+    "@types/react-scroll": "^1.8.2",
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "node-sass": "^4.14.1",
@@ -29,6 +30,7 @@
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "react-textarea-autosize": "^8.3.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
