--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
     "react-icons": "^4.2.0",
+    "react-infinite-scroll-component": "^6.0.0",
     "react-marquee-slider": "^1.1.2",
     "react-material-ui-carousel": "^2.2.1",
     "react-redux": "^7.2.2",
